configure.ac: bump version to 0.2

--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.61)
-AC_INIT([cdtextinfo], [0.1], [andreas.frisch@multimedia-labs,de])
+AC_INIT([cdtextinfo], [0.2], [andreas.frisch@multimedia-labs.de])
 AC_CONFIG_SRCDIR([src/cdtextinfo.c])
 AC_CONFIG_HEADER([config.h])
 AM_INIT_AUTOMAKE([dist-bzip2])
